write api, update docs, fix middleware protect role
