# controllers/request/request.go
@@ -1,0 +1,6 @@
+package request
+
+type NewRequest struct {
+	Type    string `json:"type"`
+	Content string `json:"content"`
+}
